# strong-types

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
.conan/: clang  default
.devcontainer/: Dockerfile  devcontainer.json
_cmake/: BuildProperties.cmake  ClangTidy.cmake  Coverage.cmake
strong_types/: CMakeLists.txt
strong_types/include/pjexx/: CMakeLists.txt  strong_types.h
strong_types/include/pjexx/strong_types/: CMakeLists.txt  concepts.h
strong_types/tests/: CMakeLists.txt  test_strong_types.cpp
